syntax = "proto3";

package auth;

import "proto/common/common.proto";

option go_package = "github.com/martbul/playground_microservices/proto/auth";

service AuthService {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Login(LoginRequest) returns (LoginResponse);
    rpc ValidateToken(ValidateTokenRequest) returns (ValidateTokenResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
    rpc ChangePassword(ChangePasswordRequest) returns (ChangePasswordResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc HealthCheck(common.HealthCheckRequest) returns (common.HealthCheckResponse);
}

//User model
message User {
    string id = 1;
    string email = 2;
    string username = 3;
    string first_name = 4;
    string last_name = 5;
    string role = 6;
    bool isActive = 7;
    string created_at = 8;
    string updated_at = 9;
}

message RegisterRequest {
    string email = 1;
    string username = 2;
    string password = 3;
    string fisrt_name = 4;
    string last_name = 5;
}

message RegisterResponse {
    common.Response response = 1;
    User user =2;
    string token =3;
}

message LoginRequest{
    string email = 1;
    string password = 2;
}

message LoginResponse {
    common.Response response = 1;
    User user = 2;
    string token = 3;
    string refresh_token = 4;
    int64 expires_at = 5;
}

message ValidateTokenRequest {
    string token = 1;
}

message ValidateTokenResponse {
    common.Response response = 1;
    bool valid = 2;
    User user = 3;
}

message GetUserRequest {
    string user_id = 1;
    string token = 2;
}

message GetUserResponse {
    common.Response response = 1;
    User user= 2;
}

message UpdateProfileRequest {
    string user_id = 1;
    string token = 2;
    string first_name =3 ;
    string last_name =4;
    string username =5;
}

message UpdateProfileResponse {
    common.Response response = 1;
    User user =2;
}

message ChangePasswordRequest {
    string user_id = 1;
    string token = 2;
    string current_password = 3;
    string new_password = 4;
}

message ChangePasswordResponse {
    common.Response response = 1;
}

message RefreshTokenRequest {
    string refresh_token = 1;
}

message RefreshTokenResponse {
    common.Response response = 1;
    string token = 2;
    string refresh_token = 3;
    int64 expires_at = 4;
}